--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "author": "Nicolas Carrasco",
     "license": "ISC",
     "dependencies": {
+        "colors": "^1.4.0",
+        "csv-parser": "^2.3.2",
+        "fs-extra": "^9.0.0",
         "yargs": "^15.3.1"
     }
 }
